Avoid Java 11 String APIs in hologram listener